--- a/index.html
+++ b/index.html
@@ -350,56 +350,56 @@
             <div class="row g-0 feature-row wow fadeIn" data-wow-delay="0.1s">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <div class="feature-item border h-100">
-                        <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
+                        <div class="feature-icon btn-xxl-square bg-purple mb-4 mt-n4">
                             <i class="fa fa-eye fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
                             <h5 class="text-uppercase mb-3">Transparency</h5>
                             <p>We believe in honest communication, clear updates, and Complete clarity in every step.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
-                                href="#"><b class="bg-white pe-3">Read More</b> <i
+                                href="#"><b class="bg-purple pe-3">Read More</b> <i
                                     class="bi bi-arrow-right bg-white ps-3"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.4s">
                     <div class="feature-item border h-100">
-                        <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
+                        <div class="feature-icon btn-xxl-square bg-purple mb-4 mt-n4">
                             <i class="fa fa-lightbulb fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
                             <h5 class="text-uppercase">Creativity</h5>
                             <p>We create unique, impactful designs and strategies that make brands stand out, develop more quality.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
-                                href="#"><b class="bg-white pe-3">Read More</b> <i
+                                href="#"><b class="bg-purple pe-3">Read More</b> <i
                                     class="bi bi-arrow-right bg-white ps-3"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
                     <div class="feature-item border h-100">
-                        <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
+                        <div class="feature-icon btn-xxl-square bg-purple mb-4 mt-n4">
                             <i class="fa fa-balance-scale fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
                             <h5 class="text-uppercase">Consistency</h5>
                             <p>We maintain High-Quality work, timely delivery, and dependable support for every client.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
-                                href="#"><b class="bg-white pe-3">Read More</b> <i
+                                href="#"><b class="bg-purple pe-3">Read More</b> <i
                                     class="bi bi-arrow-right bg-white ps-3"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.6s">
                     <div class="feature-item border h-100">
-                        <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
+                        <div class="feature-icon btn-xxl-square bg-purple mb-4 mt-n4">
                             <i class="fa fa-briefcase fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
                             <h5 class="text-uppercase">Professionalism</h5>
                             <p>We handle every project with respect, dedication, and a commitment to excellence.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
-                                href="#"><b class="bg-white pe-3">Read More</b> <i
+                                href="#"><b class="bg-purple pe-3">Read More</b> <i
                                     class="bi bi-arrow-right bg-white ps-3"></i></a>
                         </div>
                     </div>
@@ -421,19 +421,19 @@
                             solutions focused on real business growth,We combine strategy, design, and data to help brands gain visibility, attract more customers, and grow Consistency.</p>
                         <div class="row g-4 pt-2 mb-4">
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
-                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                <div class="flex-column text-center border border-5 bg-purple p-5">
                                     <h1 class="text-white" data-toggle="counter-up">8500</h1>
                                     <p class="text-white text-uppercase mb-0">Satisfied Clients</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                <div class="flex-column text-center border border-5 bg-purple p-5">
                                     <h1 class="text-white" data-toggle="counter-up">9999</h1>
                                     <p class="text-white text-uppercase mb-0">Complete Projects</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="border border-5 border-primary border-bottom-0 p-5">
+                        <div class="border border-5 border-bg-purpleborder-bottom-0 p-5">
                             <div class="experience mb-4 wow fadeIn" data-wow-delay="0.6s">
                                 <div class="d-flex justify-content-between mb-2">
                                     <span class="text-white text-uppercase">Experience</span>
